# SMI2016_Extrinsic

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
include/: geo_sur.h  my_mesh.h
src/: geosur_interface.cpp  my_mesh.cpp
src_py/: ESDF_Core.cpp  pybinding.cpp
